--- a/index test.html
+++ b/index test.html
@@ -38,6 +38,10 @@
             <p>このサイトは情報系大学生の青山のPortfolioサイトです</p>
             <p>主にここ数年で制作した3DCG作品や私のできることについてまとめています</p>
             <p>ぜひご覧になってください</p>
+            <p><br><br>推奨閲覧環境</p>
+            <p>&nbsp;Browser:Chrome,&nbsp;Firefox</p>
+            <p>&nbsp;1600&ensp;×&ensp;1200px&ensp;以上のディスプレイ</p>
+
             
         </section>
         
