--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p>ぜひご覧になってください</p>
             <p><br><br>推奨閲覧環境</p>
             <p>&nbsp;Browser:Chrome,&nbsp;Firefox</p>
-            <p>&nbsp;1600&ensp;×&ensp;900px&ensp;以上のディスプレイ</p>
+            <p>&nbsp;1920&ensp;×&ensp;1080px&ensp;以上のディスプレイ</p>
 
             
         </section>
@@ -86,7 +86,7 @@
                 <h2>Skills</h2>
                 <h3>&nbsp;Well</h3>
                 <p>&nbsp;&nbsp;模型製作　自作PC</p>
-                <h3>&nbsp;So&ensp;so</h3>
+                <h3>&nbsp;So so</h3>
                 <p>&nbsp;&nbsp;Applications:&ensp;Blender,&ensp;&ensp;Garageband,&ensp;&ensp;Microsoft Word,&ensp;Excel,&ensp;&ensp;Aviutl</p>
                 <p>&nbsp;&nbsp;Programming&ensp;Language:&ensp;C</p>
                 <h3>&nbsp;A little</h3>
