--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p>ぜひご覧になってください</p>
             <p><br><br>推奨閲覧環境</p>
             <p>&nbsp;Browser:Chrome,&nbsp;Firefox</p>
-            <p>&nbsp;1920&ensp;×&ensp;1080px&ensp;以上のディスプレイ</p>
+            <p>&nbsp;1920px&ensp;×&ensp;1080px&ensp;以上のディスプレイ</p>
 
             
         </section>
